syntax = "proto3";

option csharp_namespace = "Eternity.Proto";
package Eternity.Proto;

import "RunningState.proto";


message WorkInstruction {
	string JobId = 1; 
	RunningState RunningState = 2;
	repeated int32 InitialPath = 3;
	
}

message MessageToWorker {
	oneof MessageContents {
		WorkInstruction WorkInstruction = 1;
	};
}